# jug

./: .gitignore  BENCHMARK_F0_F1_FINAL.txt  BENCHMARK_F0_F1_RESULTS.txt  BENCHMARK_JUG_VS_PINT_DETAILED.md  BENCHMARK_REPORT.md  BENCHMARK_RESULTS.txt  BENCHMARK_SESSION_FINAL.md  BENCHMARK_SUMMARY.txt  BENCHMARK_THREE_WAY.md  BINARY_MODEL_INTEGRATION_STATUS.md  CHANGELOG_GUI.md  CLAUDE.md  CLI_PLOT_GUIDE.md  CLOCK_FILE_VALIDATION.md  CPU_GPU_IMPLEMENTATION_SUMMARY.md  DD_INTEGRATION_PLAN.md  DD_MODEL_BUG_REPORT.md  DD_MODEL_DEBUG_STATUS.md  DD_MODEL_FINAL_STATUS.md  DD_MODEL_FINAL_SUCCESS.md  DELAY_PRECISION_FLOW.md  EMPIRICAL_PRECISION_EXPLAINED.md  FITTER_CONVERGENCE_INVESTIGATION.md  FITTING_BREAKTHROUGH.md  FITTING_SCIPY_FAILURE.md  FITTING_SUCCESS_MULTI_PARAM.md  FITTING_TZR_INVESTIGATION.md  FITTING_VERIFICATION.md  GUI_QUICK_START.txt  HANDOFF_SESSION3.md  HARDENING_SUMMARY.md  INSTALL.md  JUG_BREAKDOWN_SUMMARY.txt  JUG_PROGRESS_TRACKER.md  JUG_WORKFLOW_DETAILED_BREAKDOWN.md  JUG_implementation_guide.md  JUG_package_architecture_flowcharts.md  LONGDOUBLE_SPIN_IMPLEMENTATION.md  LONGDOUBLE_SPIN_IMPLEMENTATION_OLD2.md  M2_FITTING_FINAL_STATUS.md  (+174 more)
.claude/: settings.local.json
.github/: copilot-instructions.md
archival_code/: ARCHIVE_INFO.md
clock_files/: bipm2024_from_pint.npz  bipmbipm2024_from_pint.npz  tai2tt_bipm2024.clk
data/: manifest.json
docs/: .gitignore  ASTROMETRY_DERIVATIVES.md  ASTROMETRY_DERIVATIVES_STATUS.md  ASTROMETRY_DERIVATIVES_SUMMARY.md  ASTROMETRY_FIT_DIVERGENCE_FIX.md  CLEANUP_MANIFEST.md  CLEANUP_SUMMARY.md  CODE_CLEANUP_LOG.md  CONTINUATION_PROMPT_DDK_FIX.md  CONTINUATION_PROMPT_M6_DERIVATIVES.md  CONVERGENCE_FIX.md  DDK_TESTING_STATUS.md  DD_OMEGA_BUG_CONTINUATION.md  DEBUG_ASTROMETRY_FITTING_DIVERGENCE.md  DEBUG_WORKFLOW.md  DERIVATIVE_PARITY.md  DEV_WORKING_NOTES.md  DMEFAC_DMJUMP_RNAMP_IMPLEMENTATION.md  DM_FITTING_BUG_FIX_FINAL.md  DM_FITTING_COMPLETE.md  DM_FITTING_DEBUG_SESSION.md  DM_FITTING_FIX.md  DM_FITTING_FIX_SUMMARY.md  ENGINE_STEP1_COMPLETE.md  EPHEMERIS.md  FAST_POSTFIT_OPTIMIZATION.md  FIT_RESULTS_ENHANCEMENT.md  FIXES_B1855_NAN_BUG.md  FIX_SUMMARY.md  GUI_ARCHITECTURE_RESEARCH.md  GUI_COMPLETE_SUMMARY.md  GUI_DEVICE_SELECTION.md  GUI_FIT_MISSING_PARAMS.md  GUI_FIT_RESULTS_TABLE.md  GUI_PHASE2_COMPLETE.md  GUI_POSTFIT_BEHAVIOR.md  GUI_QUICK_START.md  GUI_QUICK_START.txt  GUI_STEP2_COMPLETE.md  INSTALLATION.md  (+22 more)
examples/: full_walkthrough.ipynb  precision_comparison_longdouble_jug_hybrid.ipynb  tdb_usage_example.py
jug/: __init__.py
notebooks/: jug_example_j1909.ipynb  jug_quickstart.ipynb  jug_vs_pint_noise_comparison.ipynb  white_noise_pint_vs_jug.ipynb
playground/: .gitignore  BENCHMARK_SUMMARY.md  BENCHMARK_THREE_WAY_SUMMARY.txt  BINARY_MODEL_INTEGRATION_STATUS_old.md  CHECKPOINT_PIECEWISE_INVESTIGATION.md  CONVERGENCE_FIX_GUIDE.md  CONVERGENCE_FIX_SUMMARY.md  FINAL_BENCHMARK_TRUTH.txt  FINAL_DELIVERABLES_SESSION_14.md  FINAL_SESSION_14_RESULTS.txt  FITTER_ENHANCEMENTS_SESSION16.md  FITTING_ALGORITHM_ANALYSIS.md  FITTING_CONVERGENCE_ISSUE.md  FITTING_PIPELINE_FLOWCHART.md  FITTING_SUCCESS_QUICK_REF.md  GAUSS_NEWTON_DIAGNOSIS.md  GENERAL_FITTER_IMPLEMENTATION.md  HANDOFF_PIECEWISE_JAX_INVESTIGATION.md  INTEGRATION_COMPLETE.md  INTEGRATION_STATUS.md  JAX_ACCELERATION_ANALYSIS.md  JAX_ACCELERATION_ANALYSIS_old.md  JAX_GN_PROTOTYPE_STATUS.md  JAX_INCREMENTAL_FITTING_BREAKTHROUGH.md  JUG_master_design_philosophy.md  LM_FITTER_VALIDATION_SUMMARY.md  LONGDOUBLE_SPIN_IMPLEMENTATION_OLD.md  M2_FITTING_DIAGNOSIS.md  M2_JAX_FITTING_FINAL_STATUS_old.md  M2_JAX_FITTING_STATUS.md  M2_JAX_FITTING_VERIFIED.md  M2_JAX_FITTING_VERIFIED_old.md  MILESTONE_1_STATUS_SESSION3.md  (+85 more)
(+426 files in other folders)
