[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jug-timing"
version = "0.1.0"
description = "JAX-based pulsar timing software - fast, independent, and extensible"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Matt Miles", email = "your.email@example.com"}
]
keywords = ["pulsar", "timing", "astronomy", "jax", "optimization"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Astronomy",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "jax>=0.4.0",
    "jaxlib>=0.4.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "astropy>=5.3.0",
    "numpyro>=0.13.0",
    "optax>=0.1.7",
]

[project.optional-dependencies]
gui = [
    "PyQt6>=6.5.0",
    "pyqtgraph>=0.13.0",
    "matplotlib>=3.7.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "black>=23.0.0",
]
docs = [
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=1.3.0",
    "sphinx-autodoc-typehints>=1.24.0",
]
all = [
    "jug-timing[gui,dev,docs]",
]

[project.scripts]
jug-compute-residuals = "jug.scripts.compute_residuals:main"
jug-fit = "jug.scripts.fit_parameters:main"
jug-gui = "jug.scripts.gui:main"

[project.urls]
Homepage = "https://github.com/yourusername/jug"
Documentation = "https://jug-timing.readthedocs.io"
Repository = "https://github.com/yourusername/jug"
Issues = "https://github.com/yourusername/jug/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["jug*"]
exclude = ["tests*", "playground*"]

[tool.pytest.ini_options]
testpaths = ["jug/tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --cov=jug --cov-report=term-missing"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

[tool.ruff]
line-length = 100
target-version = "py310"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]  # imported but unused

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "astropy.*",
    "scipy.*",
    "numpyro.*",
    "optax.*",
    "jax.*",
]
ignore_missing_imports = true

[tool.coverage.run]
source = ["jug"]
omit = [
    "*/tests/*",
    "*/gui/*",  # GUI code harder to test automatically
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise AssertionError",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
